--- a/app/src/main/res/layout/activity_spinner.xml
+++ b/app/src/main/res/layout/activity_spinner.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_margin="16dp"
+    android:id="@+id/root_layout"
     tools:context=".spinner.SpinnerActivity">
 
     <TextView
